# libristra

./: .clang-format  .gitlab-ci.yml  .gitmodules  .travis.yml  CMakeLists.txt  COPYRIGHT  LICENSE  README.md  RistraConfig.cmake.in  array.h  constants.h  errors.h  fixed_vector.h  general.h  matrix.h  multi_array.h  point.h  space_vector.h  template_helpers.h  tuple_visit.h  type_traits.h  vector.h  vtk.cc  vtk.h
ristra/: .CMakeLists.txt.swp  CMakeLists.txt  announce.cc  announce.hh  array.h  dbc.h  errors.h  flecsale-vector.h  here.h  init_value.h  input_engine.h  input_source.h  inputs.h  lua_access.h  math_utils.h  ristra-config.h.in  static_warning.h  type_traits.h  vector.h
ristra/assertions/: CMakeLists.txt  dbc.h  errors.h  exceptions.h
ristra/assertions/detail/: dbc_impl.cc  dbc_impl.h
ristra/assertions/test/: dbc_test.cc  dbc_test_no_assert.cc  dbc_test_notify.cc
ristra/atomics/: .gitignore
ristra/atomics/doc/: ristra-atomics.tex  runme
ristra/atomics/example/: all-global-functions.cc  all-member-functions.cc  all-operators.cc  basic-add-sub.cc  basic-add.cc  correct-operators.cc  foobar.h  multithreaded-add-sub-inc-dec.cc  multithreaded-add-sub.cc  multithreaded-add.cc  multithreaded-min-max.cc  multithreaded-mul-div-shift.cc  runme  runme-clang  runme-gcc  runme-icc  runme-pgcc
ristra/atomics/src/: atomics-macro-class-prepost.h  atomics-macro-class.h  atomics-macro-function-prepost.h  atomics-macro-function.h  atomics-macro-member-prepost.h  atomics-macro-member.h  atomics-macro-operator-prepost.h  atomics-macro-operator.h  atomics.h
ristra/atomics/test/: runme  runme-clang  runme-gcc  runme-icc  runme-pgcc  unit-add.blessed  unit-add.cc  unit-and.blessed  unit-and.cc  unit-div.blessed  unit-div.cc  unit-global-functions.cc  unit-lshift.blessed  unit-lshift.cc  unit-max.blessed  unit-max.cc  unit-member-functions.blessed  unit-member-functions.cc  unit-min.blessed  unit-min.cc  unit-mod.blessed  unit-mod.cc  unit-mul.blessed  unit-mul.cc  unit-operators.blessed  unit-or.blessed  unit-or.cc  unit-postdec.blessed  unit-postdec.cc  unit-postinc.blessed  unit-postinc.cc  unit-predec.blessed  unit-predec.cc  unit-preinc.blessed  unit-preinc.cc  unit-rshift.blessed  unit-rshift.cc  unit-sub.blessed  unit-sub.cc  unit-threads-add.cc  (+12 more)
ristra/compatibility/: CMakeLists.txt  type_traits.h
ristra/detail/: dbc_impl.cc  dbc_impl.h  default_input_traits.h  inputs_impl.h  lua_base.h  lua_ref.h  lua_result.h  lua_utils.h  lua_value.h  math_utils_impl.h  template_helpers.h  template_helpers_impl.h  type_traits_impl.h  type_utils.h
ristra/elements/: CMakeLists.txt  elements.cc  elements.h  utilities.h
ristra/elements/test/: examples.cc
ristra/embedded/: CMakeLists.txt  embed_lua.h  embed_python.h  lua_access.h  python_utils.h
ristra/embedded/detail/: lua_base.h  lua_ref.h  lua_result.h  lua_utils.h  lua_value.h
ristra/embedded/test/: lua_test.lua  lua_utils.cc  mock_box_2d.lua  python_test.py  python_utils.cc
ristra/exception/: CMakeLists.txt  errors.h
ristra/exception/dbc/: dbc.h  dbc_impl.cc  dbc_impl.h
ristra/geometry/: CMakeLists.txt  area.h  centroid.h  normal.h  point.h  space_vector.h
ristra/geometry/detail/: area_impl.h  centroid_impl.h
ristra/geometry/shapes/: geometric_shapes.h  hexahedron.h  polygon.h  polyhedron.h  quadrilateral.h  tetrahedron.h  triangle.h
ristra/geometry/test/: centroid.cc  point.cc  space_vector.cc
ristra/initialization/: CMakeLists.txt  announce.h  arguments.h  dbc.h  errors.h  flecsale-array.h  flecsale-vector.h  here.h  init_value.h  input.h  input_engine.h  input_source.h  lua_access.h  math_utils.h
ristra/initialization/detail/: default_input_traits.h  lua_base.h  lua_ref.h  lua_result.h  lua_utils.h  lua_value.h
ristra/initialization/test/: dbc_test.cc  dbc_test_no_assert.cc  dbc_test_notify.cc  flecsale-vector.cc  init_value.cc  input_engine.cc  input_source.cc  lua_utils.cc  test-announce.cc  test_input_hard_coded_problems.cc  test_input_hard_coded_problems.h  test_inputs.h  type_traits.cc
ristra/io/: CMakeLists.txt  flecsale_unstructuredGrid.h  utils.h  vtk.cc  vtk.h  write_binary.h
ristra/io/catalyst/: CMakeLists.txt  README.md  adaptor.h  flecsale_unstructuredGrid.h
ristra/io/old/: readme.md  vtk.cc  vtk.h
ristra/io/vtk/: unstructuredGrid.h
ristra/math/: CMakeLists.txt  array.h  constants.h  general.h  general_impl.h  matrix.h  multi_array.h  vector.h
ristra/math/test/: matrix.cc  tuple.cc  vector.cc
ristra/test/: flecsale-vector.cc  init_value.cc  input_engine.cc  input_source.cc  inputs.cc  lua_utils.cc  mock_box_2d.lua  test-announce.cc  test_input_hard_coded_problems.cc  test_input_hard_coded_problems.h  test_inputs.h  type_traits.cc
ristra/unflatten/: announce.cc  announce.hh  flecsale-array.h  flecsale-vector.h  init_value.h  input_engine.h  input_source.h  lua_access.h  math_utils.h
ristra/unflatten/detail/: default_input_traits.h  inputs_impl.h  math_utils_impl.h  type_traits_impl.h
ristra/unflatten/test/: dbc_test_no_assert.cc  dbc_test_notify.cc  flecsale-vector.cc  init_value.cc  input_engine.cc  lua_utils.cc  test_input_hard_coded_problems.h  test_inputs.h
ristra/utils/: CMakeLists.txt  algorithm.h  array_ref.h  array_view.h  dbc.h  dimensioned_array.h  errors.h  exceptions.h  filter_iterator.h  fixed_vector.h  here.h  lua_access.h  lua_utils.h  python_utils.h  static_for.h  string_utils.h  target.h  tasks.h  template_helpers.h  time_utils.h  trivial_string.h  tuple_for_each.h  tuple_for_each_impl.h  tuple_to_array.h  tuple_visit.h  tuple_zip.h  tuple_zip_impl.h  type_traits.h  zip.h
ristra/utils/detail/: array_view_impl.h  dbc_impl.cc  lua_base.h  lua_ref.h  lua_result.h  lua_utils.h  lua_value.h  template_helpers_impl.h  tuple_for_each_impl.h  tuple_visit_impl.h  tuple_zip_impl.h  type_traits_impl.h  type_utils.h
ristra/utils/test/: array_view.cc  caliper.cc  dbc_test.cc  dbc_test_no_assert.cc  dbc_test_notify.cc  fixed_vector.cc  lua_test.lua  lua_utils.cc  python_utils.cc  static_for.cc  tasks.cc  tuple_for_each.cc  tuple_visit.cc  tuple_zip.cc  zip.cc  (+1 more)
(+105 files in other folders)
