#~----------------------------------------------------------------------------~#
# Copyright (c) 2017 Los Alamos National Security, LLC
# All rights reserved.
#~----------------------------------------------------------------------------~#
add_library( ${PROJECT_NAME}_compatibility
  OBJECT
  type_traits.h
)

